<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Graduatesform">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#2A3D60"
        >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/name"
            />
        <TextView
            android:id="@+id/data_of_brith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/dataofbrith"
            />
        <EditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/address"
            />
        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/phone"
            android:maxLength="11"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/Email"
            />

        <EditText
            android:id="@+id/GraduationYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:inputType="number"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/GraduationYear"
            />

        <EditText
            android:id="@+id/Currentjob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/Currentjob"
            />
        <EditText
            android:id="@+id/CompayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/CompayName"
            />
        <TextView
            android:id="@+id/dateofemployment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ship_edittext"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="7dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:hint="@string/dateofemployment"
            />
        <Button
            android:id="@+id/Send"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="21sp"
            android:textStyle="italic|bold"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/btn"

            />
    </LinearLayout>

</ScrollView>