<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Table_student">




    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/iv_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />
    <TextView
        android:id="@+id/tv_table"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notable"
        android:textSize="22sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firsttable"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:padding="10dp"
       android:layout_gravity="center"
        android:background="@drawable/buttonship2"
        />
    <Button
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secound"
        android:textSize="21sp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
android:background="@drawable/buttonship2"
        />
</merge>