<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

android:orientation="vertical"
    tools:context=".GraduationCertificate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2A3D60"
        >

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <ProgressBar
              android:id="@+id/progressbar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:visibility="invisible"
              ></ProgressBar>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/containers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >

    <TextView
        android:id="@+id/graduationLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Certificatelanguage"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/entergraduationLanguage"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner2"

        android:gravity="center"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/entergraduationtype"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/graduationtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entergraduationLanguage"
        android:layout_margin="16dp"
        android:text="@string/Typeofcertificate"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:fontFamily="@font/coda"
        />

    <Spinner
        android:id="@+id/entergraduationtype"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner2"
        android:gravity="center"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/graduationtype"
        app:layout_constraintTop_toBottomOf="@id/entergraduationLanguage" />

    <TextView
        android:id="@+id/departmenttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entergraduationtype"
        android:layout_margin="16dp"
        android:text="@string/departments"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:fontFamily="@font/coda"
        />

    <Spinner
        android:id="@+id/enterdepartment"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner2"
        android:gravity="center"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/graduationtype"
        app:layout_constraintTop_toBottomOf="@id/entergraduationtype" />

    <TextView
        android:id="@+id/GraduationYeartext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/coda"
        android:text="@string/Graduationyear"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterdepartment" />

    <Spinner
        android:id="@+id/GraduationYear"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner2"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enterdepartment"
        app:layout_constraintTop_toBottomOf="@id/enterdepartment" />


    <TextView
        android:id="@+id/Graduationmonthtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/coda"
        android:text="@string/Graduationmonth"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Graduationmonth"
        app:layout_constraintEnd_toStartOf="@+id/Graduationmonth"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/Graduationmonth"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"

        android:background="@drawable/spinner2"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@+id/GraduationYear"
        app:layout_constraintTop_toBottomOf="@id/GraduationYeartext" />


    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ship_edittext"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Graduationmonthtext" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterName"
        android:layout_margin="16dp"
        android:inputType="number"
        android:background="@drawable/ship_edittext"
        android:padding="7dp"
        android:gravity="center"
        android:fontFamily="@font/coda"
        android:textSize="15sp"
        android:hint="@string/code_student"
        />


   <TextView
       android:id="@+id/photoId"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/code"
       android:text="@string/Attachphotoid"
       android:textSize="15sp"
       android:textColor="#FFF"
       android:layout_marginTop="20dp"
       android:layout_marginStart="10dp"
android:drawableEnd="@drawable/upload"
       />

 <TextView
     android:id="@+id/gradutionphoto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/photoId"
     android:text="@string/Attachagraduationcertificate"
     android:textSize="15sp"
     android:textColor="#FFF"
     android:layout_marginTop="20dp"
     android:layout_marginStart="10dp"
     android:drawableEnd="@drawable/upload"
     />
 <TextView
     android:id="@+id/addphoto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/gradutionphoto"
     android:text="@string/Attachapicture"
     android:textSize="15sp"
     android:textColor="#FFF"
     android:layout_marginTop="20dp"
     android:layout_marginStart="10dp"
     android:drawableEnd="@drawable/upload"
     />






    <Button
        android:id="@+id/send"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addphoto"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:background="@drawable/btn"
        android:textColor="#000"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
      </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>